# NotepadSh

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
App/: CMakeLists.txt
App/include/: MyApp.h
Frame/: CMakeLists.txt
NotepadSh/: CMakeLists.txt  MyApp.cpp  MyFrame.cpp  main.cpp  meson.build
NotepadSh/App/src/: MyApp.cpp
NotepadSh/Frame/: CMakeLists.txt  MyFrame.cpp  MyFrame.h  meson.build
datas/: notepadSh.wxg
inc/: MyApp.h  MyFrame.h  builtinTokens.h  cmd_parser.h  cmd_proc.h  command.h  frame.h  pch.h  utils.h  widgetids.h
src/: CMakeLists.txt  MyApp.cpp  MyFrame.cpp  appload.h  builtinTokens.cpp  cmd_parser.cpp  cmd_proc.c  cmd_proc.cpp  command.cpp  main.cpp  meson.build
src/App/: meson.build
src/Application/: MyFrame.cpp  meson.build
src/Frame/: CMakeLists.txt  meson.build
src/Frame/include/: MyFrame.h
src/Frame/src/: MyFrame.cpp
src/app/: frame.cpp  frame.h
src/inc/: command.h
src/include/: MyApp.h  MyFrame.h
tool/: autoc.py
tool/auto/: autoc.py  autos.py
